back-admin-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: back-admin-deployment
  labels:
    app.kubernetes.io/name: back-admin
    app.kubernetes.io/component: server
    app.kubernetes.io/part-of: auth-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: back-admin
      app.kubernetes.io/component: server
      app.kubernetes.io/part-of: auth-app
  template:
    metadata:
      labels:
        app.kubernetes.io/name: back-admin
        app.kubernetes.io/component: server
        app.kubernetes.io/part-of: auth-app
    spec:
      imagePullSecrets:
        - name: docker-hub-secret
      containers:
        - name: back-admin
          image: arceledock/myfullapp-admin:1.0.2
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "512Mi"
              cpu: "500m"
            limits:
              memory: "1Gi"
              cpu: "1000m"
          livenessProbe:
            httpGet:
              path: /api/v1/administration/probes/health-check
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 15
          readinessProbe:
            httpGet:
              path: /api/v1/administration/probes/health-check
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
