back-admin-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: back-admin-service
  labels:
    app.kubernetes.io/name: back-admin
    app.kubernetes.io/component: server
    app.kubernetes.io/part-of: auth-app
spec:
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  selector:
    app.kubernetes.io/name: back-admin
    app.kubernetes.io/component: server
    app.kubernetes.io/part-of: auth-app
