ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
          - host: localhost
            path: /
            pathType: Prefix
            backend:
              service:
                name: back-admin-service
                port:
                  number: 80
